cabal-version:      >=1.10
name:               reflex-stone
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
build-type:         Simple
extra-source-files: README.md

executable reflex-stone
  main-is:          Main.hs
  build-depends:
      base
    , reflex
    , reflex-dom

  default-language: Haskell2010
